--- a/index.html
+++ b/index.html
@@ -43,19 +43,27 @@
                 </header>
             </div>
             <main>
-                <section>
+                <section class="main">
                     <div class="frame position__frame frame--hero">
                         <span class="frame__text--side">ELCO SA</span>
                         <h1 class="frame__text frame__text--big">
                             Soluția completă în instalații electrice cu 30 de ani de experiență
                         </h1>
                     </div>
-                    <div class="frame position__frame">
+                    <div class="frame position__frame carousel"> <!-- for small screens only -->
+                        <h3 class="frame__text frame__text--carousel">
+                            Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
+                        </h3>
+                        <h3 class="frame frame__text frame__text--carousel">
+                            Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
+                        </h3>
+                    </div>
+                    <div class="frame position__frame header__hide-desktop">
                         <h3 class="frame__text">
                             Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
                         </h3>
                     </div>
-                    <div class="frame position__frame">
+                    <div class="frame position__frame header__hide-desktop">
                         <h3 class="frame__text">
                             Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
                         </h3>
