--- a/index.html
+++ b/index.html
@@ -50,15 +50,17 @@
                             Soluția completă în instalații electrice cu 30 de ani de experiență
                         </h1>
                     </div>
-                    <div class="frame position__frame carousel"> <!-- for small screens only -->
-                        <h3 class="frame__text frame__text--carousel">
-                            Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
-                        </h3>
-                        <h3 class="frame frame__text frame__text--carousel">
-                            Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
-                        </h3>
+                    <div class="frame position__frame"> <!-- for small screens only -->
+                        <div class="carousel">
+                            <h3 class="frame__text frame__text--carousel">
+                                Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
+                            </h3>
+                            <h3 class="frame__text frame__text--carousel">
+                                Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
+                            </h3>
+                        </div>
                     </div>
-                    <div class="frame position__frame header__hide-desktop">
+                    <div class="frame position__frame header__hide-desktop"> <!-- for large screens only -->
                         <h3 class="frame__text">
                             Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
                         </h3>
