--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
                     </div>
                 </section>
             </main>
-            <img class="svg svg--arrow-down" src="./images/arrow.svg" alt="arrow down">
         </div>
+        <img class="svg svg--arrow-down" src="./images/arrow.svg" alt="arrow down">
     </div>
     <div class="bg-img bg-img--secondary">
         <section class="certificates">
-            <div class="frame pos-help__frame">
+            <div class="frame">
                 <h2 class="frame__title">
                     Certificate
                 </h2>
             </div>
-            <div class="fle">
+            <div class="certificates_items">
                 <a href="./images/certificat_1.jpg">
                     <img class="certificates__item" src="./images/certificat_1.jpg" class="certif-img" alt="certificate 1">
                 </a>
@@ -94,7 +94,7 @@
                 </a>
             </div>
         </section>
-        <section class="mpositioning">
+        <section class="positioning">
             <div class="frame pos-help__frame">
                 <h2 class="frame__title">
                     Locație
