--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                 </span>
             </div>
         </footer>
+        <a class="up" href="#top">
+            <img class="svg svg--arrow-up" src="./images/arrow.svg" alt="arrow up">
+        </a>
     </div>
-    <a href="#top">
-        <img class="svg svg--arrow-up" src="./images/arrow.svg" alt="arrow up">
-    </a>
 </body>
 </html>
