--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
 <body>
     <div class="bg-img bg-img--hero" id="top">
         <div class="position">
-            <div class="header">
-                <header class="frame frame--header">
-                    <nav class="nav">
-                        <a href="index.html">
-                            <img class="svg nav__svg" src="./images/logo.svg" alt="ELCO logo">
-                        </a>
+            <header class="frame frame--header">
+                <div class="header">
+                    <a href="index.html">
+                        <img class="svg header__svg" src="./images/logo.svg" alt="ELCO logo">
+                    </a>
+                    <!-- <nav class="nav">
+                        <img class="svg nav__svg" src="./images/close.svg" alt="close">
                         <ul class="nav__links">
-                            <li class="nav__link nav__link--hide"><a href="index.html">Acasă</a></li>
-                            <li class="nav__link nav__link--hide"><a href="activitate.html">Activitate</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Portofoliu</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Certificate</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Cariere</a></li>
-                            <li class="nav__link nav__link--hide"><a href="#">Contact</a></li>
+                            <li class="nav__item"><a class="nav__link" href="index.html">Acasă</a></li>
+                            <li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
+                            <li class="nav__item"><a class="nav__link" href="#">Portofoliu</a></li>
+                            <li class="nav__item"><a class="nav__link" href="#">Certificate</a></li>
+                            <li class="nav__item"><a class="nav__link" href="#">Cariere</a></li>
+                            <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
                         </ul>
-                        <img class="svg nav__svg" src="./images/menu.svg" alt="menu">
-                        <img class="svg nav__svg svg--hide" src="./images/close.svg" alt="close">
-                    </nav>
-                </header>
-            </div>
+                    </nav> -->
+                    <img class="svg nav__svg" src="./images/menu.svg" alt="menu">
+                </div>    
+            </header>
             <main>
                 <section class="main">
                     <div class="frame position__frame frame--hero">
