--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <a href="index.html">
                         <img class="svg header__svg" src="./images/logo.svg" alt="ELCO logo">
                     </a>
-                    <!-- <nav class="nav">
-                        <img class="svg nav__svg" src="./images/close.svg" alt="close">
+                    <nav class="nav">
+                        <img class="svg header__svg header__svg--close" src="./images/close.svg" alt="close">
                         <ul class="nav__links">
                             <li class="nav__item"><a class="nav__link" href="index.html">Acasă</a></li>
                             <li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
@@ -38,8 +38,8 @@
                             <li class="nav__item"><a class="nav__link" href="#">Cariere</a></li>
                             <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
                         </ul>
-                    </nav> -->
-                    <img class="svg nav__svg" src="./images/menu.svg" alt="menu">
+                    </nav>
+                    <img class="svg header__svg" src="./images/menu.svg" alt="menu">
                 </div>    
             </header>
             <main>
