--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <header class="frame frame--header">
                 <div class="header">
                     <a href="index.html">
-                        <img class="svg header__svg" src="./images/logo.svg" alt="ELCO logo">
+                        <img class="svg header__svg" id="logo" src="./images/logo.svg" alt="ELCO logo">
                     </a>
-                    <nav class="nav">
-                        <img class="svg header__svg header__svg--close" src="./images/close.svg" alt="close">
+                    <nav class="nav" id="nav">
+                        <img class="svg header__svg header__svg--close" id="close" src="./images/close.svg" alt="close">
                         <ul class="nav__links">
                             <li class="nav__item"><a class="nav__link" href="index.html">Acasă</a></li>
                             <li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
@@ -39,7 +39,7 @@
                             <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
                         </ul>
                     </nav>
-                    <img class="svg header__svg" src="./images/menu.svg" alt="menu">
+                    <img class="svg header__svg" id="menu" src="./images/menu.svg" alt="menu">
                 </div>    
             </header>
             <main>
@@ -138,4 +138,6 @@
         </a>
     </div>
 </body>
+
+<script src="./js/script.js"></script>
 </html>
