--- a/activitate.html
+++ b/activitate.html
@@ -8,29 +8,26 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-	<div class="activitate-bg" id="top">
+	<div class="bg__img bg__img--activitate" id="top">
 		<div class="container">
-			<header class="header-fixed">
-                <div class="flex-sb text-bg header"> <!--added this as separate element from header because position fixed from header was conflicting with position absolute from text-bg::after-->
+            <header class="frame frame--header">
+                <div class="header">
                     <a href="index.html">
-                        <img class="svg" src="./images/logo.svg" alt="ELCO logo">
+                        <img class="svg header__svg" id="logo" src="./images/logo.svg" alt="ELCO logo">
                     </a>
-
-                    <nav class="flex">
-                        <ul class="flex nav-links">
-							<li class="nav-link"><a href="index.html">Acasă</a></li>
-                            <li class="nav-link"><a href="activitate.html">Activitate</a></li>
-                            <li class="nav-link"><a href="#">Portofoliu</a></li>
-                            <li class="nav-link"><a href="#">Certificate</a></li>
-                            <li class="nav-link"><a href="#">Cariere</a></li>
-                            <li class="nav-link"><a href="#">Contact</a></li>
+                    <nav class="nav" id="nav">
+                        <img class="svg header__svg header__svg--close" id="close" src="./images/close.svg" alt="close">
+                        <ul class="nav__links">
+                            <li class="nav__item"><a class="nav__link" href="index.html">Acasă</a></li>
+                            <li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
+                            <li class="nav__item"><a class="nav__link" href="#">Portofoliu</a></li>
+                            <li class="nav__item"><a class="nav__link" href="#">Certificate</a></li>
+                            <li class="nav__item"><a class="nav__link" href="#">Cariere</a></li>
+                            <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
                         </ul>
-    
-                        <img class="svg hide-desktop" src="./images/menu.svg" alt="menu">
-    
-                        <img class="svg hide-desktop" src="./images/close.svg" alt="close">
                     </nav>
-                </div>
+                    <img class="svg header__svg" id="menu" src="./images/menu.svg" alt="menu">
+                </div>    
             </header>
 	
 			<main class="main-section flex-col flex-sa">
