--- a/index.html
+++ b/index.html
@@ -20,59 +20,57 @@
     <title>ELCO | Pagina de pornire</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body class="home">
     <div class="bg-img bg-img--hero" id="top">
-        <div class="position">
-            <header class="frame frame--header">
-                <div class="header">
-                    <a href="index.html">
-                        <img class="svg header__svg" id="logo" src="./images/logo.svg" alt="ELCO logo">
-                    </a>
-                    <nav class="nav" id="nav">
-                        <img class="svg header__svg header__svg--close" id="close" src="./images/close.svg" alt="close">
-                        <ul class="nav__links">
-                            <li class="nav__item"><a class="nav__link" href="index.html">Acasă</a></li>
-                            <li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
-                            <li class="nav__item"><a class="nav__link" href="#">Portofoliu</a></li>
-                            <li class="nav__item"><a class="nav__link" href="#">Certificate</a></li>
-                            <li class="nav__item"><a class="nav__link" href="#">Cariere</a></li>
-                            <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
-                        </ul>
-                    </nav>
-                    <img class="svg header__svg" id="menu" src="./images/menu.svg" alt="menu">
-                </div>    
-            </header>
-            <main>
-                <section class="main">
-                    <div class="frame position__frame frame--hero">
-                        <span class="frame__text--side">ELCO SA</span>
-                        <h1 class="frame__text frame__text--big">
-                            Soluția completă în instalații electrice cu 30 de ani de experiență
-                        </h1>
-                    </div>
-                    <div class="frame position__frame"> <!-- for small screens only -->
-                        <div class="carousel">
-                            <h3 class="frame__text frame__text--carousel">
-                                Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
-                            </h3>
-                            <h3 class="frame__text frame__text--carousel">
-                                Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
-                            </h3>
-                        </div>
-                    </div>
-                    <div class="frame position__frame header__hide-desktop"> <!-- for large screens only -->
-                        <h3 class="frame__text">
+        <header class="frame frame--header">
+            <div class="header">
+                <a href="index.html">
+                    <img class="svg header__svg" id="logo" src="./images/logo.svg" alt="ELCO logo">
+                </a>
+                <nav class="nav" id="nav">
+                    <img class="svg header__svg header__svg--close" id="close" src="./images/close.svg" alt="close">
+                    <ul class="nav__links">
+                        <li class="nav__item"><a class="nav__link" href="index.html">Acasă</a></li>
+                        <li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">Portofoliu</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">Certificate</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">Cariere</a></li>
+                        <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <img class="svg header__svg" id="menu" src="./images/menu.svg" alt="menu">
+            </div>    
+        </header>
+        <main>
+            <section>
+                <div class="frame home__frame frame--hero">
+                    <span class="frame__text--side">ELCO SA</span>
+                    <h1 class="frame__text frame__text--big">
+                        Soluția completă în instalații electrice cu 30 de ani de experiență
+                    </h1>
+                </div>
+                <div class="frame home__frame"> <!-- for small screens only -->
+                    <div class="carousel">
+                        <h3 class="frame__text frame__text--carousel">
                             Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
                         </h3>
-                    </div>
-                    <div class="frame position__frame header__hide-desktop">
-                        <h3 class="frame__text">
+                        <h3 class="frame__text frame__text--carousel">
                             Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
                         </h3>
                     </div>
-                </section>
-            </main>
-        </div>
+                </div>
+                <div class="frame home__frame header__hide-desktop"> <!-- for large screens only -->
+                    <h3 class="frame__text">
+                        Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
+                    </h3>
+                </div>
+                <div class="frame home__frame header__hide-desktop">
+                    <h3 class="frame__text">
+                        Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
+                    </h3>
+                </div>
+            </section>
+        </main>
         <img class="svg svg--arrow-down" src="./images/arrow.svg" alt="arrow down">
     </div>
     <div class="bg-img bg-img--secondary">
