--- a/activitate.html
+++ b/activitate.html
@@ -7,48 +7,50 @@
 	<title>ELCO | Activitate</title>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-	<div class="bg__img bg__img--activitate" id="top">
-		<header class="frame frame--header">
-			<div class="header">
-				<a href="index.html">
-					<img class="svg header__svg" id="logo" src="./images/logo.svg" alt="ELCO logo">
-				</a>
-				<nav class="nav" id="nav">
-					<img class="svg header__svg header__svg--close" id="close" src="./images/close.svg" alt="close">
-					<ul class="nav__links">
-						<li class="nav__item"><a class="nav__link" href="index.html">Acasă</a></li>
-						<li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
-						<li class="nav__item"><a class="nav__link" href="#">Portofoliu</a></li>
-						<li class="nav__item"><a class="nav__link" href="#">Certificate</a></li>
-						<li class="nav__item"><a class="nav__link" href="#">Cariere</a></li>
-						<li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
-					</ul>
-				</nav>
-				<img class="svg header__svg" id="menu" src="./images/menu.svg" alt="menu">
-			</div>    
-		</header>
-
-		<main class="main-section flex-col flex-sa">
-			<section class="height-inherit">
-				<div class="main-title">
-					<h2 class="motto text-bg">
-						Proiectare, avizare și executare branșamente electrice, casnice și industriale
-						<span class="side-text">ELCO SA</span>
-					</h2>
+<body class="activity">
+	<div class="bg__img bg__img--activity" id="top">
+		<section class="hero-section">
+			<header class="frame frame--header">
+				<div class="header">
+					<a href="index.html">
+						<img class="svg header__svg" id="logo" src="./images/logo.svg" alt="ELCO logo">
+					</a>
+					<nav class="nav" id="nav">
+						<img class="svg header__svg header__svg--close" id="close" src="./images/close.svg" alt="close">
+						<ul class="nav__links">
+							<li class="nav__item"><a class="nav__link" href="index.html">Acasă</a></li>
+							<li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
+							<li class="nav__item"><a class="nav__link" href="#">Portofoliu</a></li>
+							<li class="nav__item"><a class="nav__link" href="#">Certificate</a></li>
+							<li class="nav__item"><a class="nav__link" href="#">Cariere</a></li>
+							<li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
+						</ul>
+					</nav>
+					<img class="svg header__svg" id="menu" src="./images/menu.svg" alt="menu">
+				</div>    
+			</header>
+	
+			<main>
+				<section class="height-inherit">
+					<div class="main-title">
+						<span class="frame__text--side">ELCO SA</span>
+						<h2 class="motto text-bg">
+							Proiectare, avizare și executare branșamente electrice, casnice și industriale
+						</h2>
+					</div>
+	
+					<h3 class="content text-bg">
+						Suntem autorizați de către ANRE pentru proiectare instalații electrice de orice putere până la tensiunea de 20kV
+					</h3>
+				</section>
+	
+				<div class="button smaller-container flex-cen">
+					<a href="#servicii">
+						<button class="btn">Servicii</button>
+					</a>
 				</div>
-
-				<h3 class="content text-bg">
-					Suntem autorizați de către ANRE pentru proiectare instalații electrice de orice putere până la tensiunea de 20kV
-				</h3>
-			</section>
-
-			<div class="button smaller-container flex-cen">
-				<a href="#servicii">
-					<button class="btn">Servicii</button>
-				</a>
-			</div>
-		</main>
+			</main>
+		</section>
 
 		<section class="act-section" id="servicii">
 			<h2 class="title text-bg">
@@ -88,13 +90,6 @@
 				<li>Sisteme de supraveghere și control acces</li>
 			</ul>
 		</section>
-
-		<a href="#container">
-			<button>
-				<img src="./images/arrow.svg" alt="arrow up">
-			</button>
-		</a>
-
         <footer class="frame frame--footer">
             <div class="footer">
                 <div class="contact footer__inner">
