--- a/activitate.html
+++ b/activitate.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="activity">
-	<div class="bg__img bg__img--activity" id="top">
+	<div class="bg-img bg-img--activity" id="top">
 		<section class="hero-section">
 			<header class="frame frame--header">
 				<div class="header">
