--- a/activitate.html
+++ b/activitate.html
@@ -31,15 +31,15 @@
 			</header>
 	
 			<main>
-				<section class="height-inherit">
-					<div class="main-title">
+				<section>
+					<div class="frame activity__frame">
 						<span class="frame__text--side">ELCO SA</span>
-						<h2 class="motto text-bg">
+						<h2 class="frame__text frame__text--big">
 							Proiectare, avizare și executare branșamente electrice, casnice și industriale
 						</h2>
 					</div>
 	
-					<h3 class="content text-bg">
+					<h3 class="frame frame__text">
 						Suntem autorizați de către ANRE pentru proiectare instalații electrice de orice putere până la tensiunea de 20kV
 					</h3>
 				</section>
