--- a/activitate.html
+++ b/activitate.html
@@ -9,7 +9,7 @@
 </head>
 <body class="activity">
 	<div class="bg-img bg-img--activity" id="top">
-		<section class="hero-section">
+		<div class="hero-section">
 			<header class="frame frame--header">
 				<div class="header">
 					<a href="index.html">
@@ -50,7 +50,7 @@
 					</a>
 				</div>
 			</main>
-		</section>
+		</div>
 
 		<section class="act-section" id="servicii">
 			<h2 class="title text-bg">
