--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     frame                       block for adding a white strip background
     frame--header               rounds only the bottom-left corner
 
+    ----------------------- Ideas -----------------------
+    
+    for positioning the elements on desktop ."page-name" has paddng left and .frame has padding right
+
 -------------------------------------------------------------------------->
 
 <!DOCTYPE html>
@@ -118,29 +122,29 @@
 
         <footer class="frame frame--footer">
             <div class="footer">
-                <div class="contact footer__inner">
+                <div class="footer__inner">
                     <div class="footer__details">
-                        <img class="contact__icon" src="./images/email.svg" alt="email">
+                        <img class="footer__icon" src="./images/email.svg" alt="email">
 
-                        <span class="contact__info"> elco@elco-cv.ro </span>
+                        <span class="footer__info"> elco@elco-cv.ro </span>
                     </div>
 
                     <div class="footer__details">
-                        <img class="contact__icon" src="./images/phone.svg" alt="phone">
+                        <img class="footer__icon" src="./images/phone.svg" alt="phone">
 
-                        <span class="contact__info"> 0267 351 009 </span>
+                        <span class="footer__info"> 0267 351 009 </span>
                     </div>
 
                     <div class="footer__details">
-                        <img class="contact__icon" src="./images/fax.svg" alt="fax">
+                        <img class="footer__icon" src="./images/fax.svg" alt="fax">
 
-                        <span class="contact__info"> 0267 351 004 </span>
+                        <span class="footer__info"> 0267 351 004 </span>
                     </div>
 
                     <div class="footer__details">
-                        <img class="contact__icon" src="./images/address.svg" alt="address">
+                        <img class="footer__icon" src="./images/address.svg" alt="address">
 
-                        <span class="contact__info"> str. N. Bălcescu nr. 17 <br>Sf. Gheorghe <br>CP 520024 </span>
+                        <span class="footer__info"> str. N. Bălcescu nr. 17 <br>Sf. Gheorghe <br>CP 520024 </span>
                     </div>
                 </div>
 
