--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>ELCO | Pagina de pornire</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body class="home">
+<body class="page">
     <div class="bg-img bg-img--hero" id="top">
         <header class="frame frame--header">
             <div class="header">
@@ -49,7 +49,7 @@
         </header>
 
         <main>
-            <div class="frame home__frame frame--hero">
+            <div class="frame page__spacing frame--hero">
                 <span class="frame__text--side">ELCO SA</span>
 
                 <h1 class="frame__text frame__text--big">
@@ -57,7 +57,7 @@
                 </h1>
             </div>
 
-            <div class="frame home__frame"> <!-- for small screens only -->
+            <div class="frame page__spacing"> <!-- for small screens only -->
                 <div class="carousel">
                     <h3 class="frame__text frame__text--carousel">
                         Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
@@ -69,13 +69,13 @@
                 </div>
             </div>
 
-            <div class="frame home__frame header__hide-desktop"> <!-- for large screens only -->
+            <div class="frame page__spacing header__hide-desktop"> <!-- for large screens only -->
                 <h3 class="frame__text">
                     Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
                 </h3>
             </div>
 
-            <div class="frame home__frame header__hide-desktop">
+            <div class="frame page__spacing header__hide-desktop">
                 <h3 class="frame__text">
                     Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
                 </h3>
