--- a/activitate.html
+++ b/activitate.html
@@ -44,15 +44,15 @@
 					</h3>
 				</section>
 	
-				<div class="button smaller-container flex-cen">
-					<a href="#servicii">
-						<button class="btn">Servicii</button>
+				<div class="hero-section__button">
+					<a href="#services">
+						<button class="button">Servicii</button>
 					</a>
 				</div>
 			</main>
 		</div>
 
-		<section class="act-section" id="servicii">
+		<section class="act-section" id="services">
 			<h2 class="title text-bg">
 				Proiectare și execuție
 			</h2>
