--- a/activitate.html
+++ b/activitate.html
@@ -45,9 +45,7 @@
 				</section>
 	
 				<div class="hero-section__button">
-					<a href="#services">
-						<button class="button">Servicii</button>
-					</a>
+					<a class="button" href="#services">Servicii</a>
 				</div>
 			</main>
 		</div>
