--- a/activitate.html
+++ b/activitate.html
@@ -39,7 +39,7 @@
 						</h2>
 					</div>
 	
-					<h3 class="frame page__spacing frame__text">
+					<h3 class="frame frame__text">
 						Suntem autorizați de către ANRE pentru proiectare instalații electrice de orice putere până la tensiunea de 20kV
 					</h3>
 				</section>
@@ -50,11 +50,11 @@
 			</main>
 		</div>
 
-		<section class="act-section" id="services">
-			<h2 class="title text-bg">
+		<section class="service" id="services">
+			<h2 class="frame frame__title">
 				Proiectare și execuție
 			</h2>
-			<ul class="list content text-bg">
+			<ul class="frame frame__list">
 				<li>Instalații de iluminat și distribuție electrică</li>
 				<li>Instalații de paratrăsnet și împământare</li>
 				<li>Tablouri electrice de distribuție și comandă</li>
