--- a/activitate.html
+++ b/activitate.html
@@ -7,7 +7,7 @@
 	<title>ELCO | Activitate</title>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
-<body class="activity">
+<body class="page">
 	<div class="bg-img bg-img--activity" id="top">
 		<div class="hero-section">
 			<header class="frame frame--header">
@@ -32,7 +32,7 @@
 	
 			<main>
 				<section>
-					<div class="frame activity__frame frame--hero">
+					<div class="frame frame--hero">
 						<span class="frame__text--side">ELCO SA</span>
 						<h2 class="frame__text frame__text--big">
 							Proiectare, avizare și executare branșamente electrice, casnice și industriale
@@ -50,43 +50,43 @@
 			</main>
 		</div>
 
-		<section class="service" id="services">
+		<section class="page__separator page__separator--first" id="services">
 			<h2 class="frame frame__title">
 				Proiectare și execuție
 			</h2>
-			<ul class="frame frame__list">
-				<li>Instalații de iluminat și distribuție electrică</li>
-				<li>Instalații de paratrăsnet și împământare</li>
-				<li>Tablouri electrice de distribuție și comandă</li>
-				<li>Instalații electrice de siguranță automatizată cu Generator sau UPS</li>
-				<li>Instalații electrice fotovoltaice și eoliene</li>
+			<ul class="frame frame__text frame__text--list">
+				<li class="frame__list-item">Instalații de iluminat și distribuție electrică</li>
+				<li class="frame__list-item">Instalații de paratrăsnet și împământare</li>
+				<li class="frame__list-item">Tablouri electrice de distribuție și comandă</li>
+				<li class="frame__list-item">Instalații electrice de siguranță automatizată cu Generator sau UPS</li>
+				<li class="frame__list-item">Instalații electrice fotovoltaice și eoliene</li>
 			</ul>
 		</section>
 
-		<section class="act-section" id="mas">
-			<h2 class="title text-bg">
+		<section class="page__separator">
+			<h2 class="frame frame__title">
 				Măsurători și verificări periodice
 			</h2>
-			<ul class="list content text-bg">
-				<li>Verificare prize de împământare și rețea de egalizare potențiale</li>
-				<li>Verificare instalație paratrăznet</li>
-				<li>Verificare izolație cabluri &#40;test până 5000V&#41;</li>
-				<li>Monitorizare completă a parametrilor rețelei electrice &#40;24-48 ore&#41;</li>
-				<li>Verificare tablouri electrice &#40;incl. cameră termoviziune&#41;</li>
-				<li>Măsurători de intensitate a luminii</li>
+			<ul class="frame frame__text frame__text--list">
+				<li class="frame__list-item">Verificare instalație paratrăznet</li>
+				<li class="frame__list-item">Verificare prize de împământare și rețea de egalizare potențiale</li>
+				<li class="frame__list-item">Verificare izolație cabluri &#40;test până 5000V&#41;</li>
+				<li class="frame__list-item">Monitorizare completă a parametrilor rețelei electrice &#40;24-48 ore&#41;</li>
+				<li class="frame__list-item">Verificare tablouri electrice &#40;incl. cameră termoviziune&#41;</li>
+				<li class="frame__list-item">Măsurători de intensitate a luminii</li>
 			</ul>
 		</section>
 
-		<section class="act-section" id="ins">
-			<h2 class="title text-bg">
+		<section class="page__separator">
+			<h2 class="frame frame__title">
 				Instalații de curenți slabi
 			</h2>
 
-			<ul class="list content text-bg">
-				<li>Sisteme de securitate anti efracție</li>
-				<li>Rețele de Voce Date &#40;incl. rețele optice&#41;</li>
-				<li>Sisteme de securitate la incendiu</li>
-				<li>Sisteme de supraveghere și control acces</li>
+			<ul class="frame frame__text frame__text--list">
+				<li class="frame__list-item">Sisteme de securitate anti efracție</li>
+				<li class="frame__list-item">Rețele de Voce Date &#40;incl. rețele optice&#41;</li>
+				<li class="frame__list-item">Sisteme de securitate la incendiu</li>
+				<li class="frame__list-item">Sisteme de supraveghere și control acces</li>
 			</ul>
 		</section>
 
