--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 
                 <nav class="nav" id="nav">
                     <img class="svg header__svg header__svg--close" id="close" src="./images/close.svg" alt="close">
+
                     <ul class="nav__links">
                         <li class="nav__item"><a class="nav__link" href="index.html">Acasă</a></li>
                         <li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
-                        <li class="nav__item"><a class="nav__link" href="#">Portofoliu</a></li>
+                        <li class="nav__item"><a class="nav__link" href="portofoliu.html">Portofoliu</a></li>
                         <li class="nav__item"><a class="nav__link" href="#">Certificate</a></li>
                         <li class="nav__item"><a class="nav__link" href="#">Cariere</a></li>
                         <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
