--- a/activitate.html
+++ b/activitate.html
@@ -15,17 +15,20 @@
 					<a href="index.html">
 						<img class="svg header__svg" id="logo" src="./images/logo.svg" alt="ELCO logo">
 					</a>
+
 					<nav class="nav" id="nav">
 						<img class="svg header__svg header__svg--close" id="close" src="./images/close.svg" alt="close">
+
 						<ul class="nav__links">
 							<li class="nav__item"><a class="nav__link" href="index.html">Acasă</a></li>
 							<li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
-							<li class="nav__item"><a class="nav__link" href="#">Portofoliu</a></li>
+							<li class="nav__item"><a class="nav__link" href="portofoliu.html">Portofoliu</a></li>
 							<li class="nav__item"><a class="nav__link" href="#">Certificate</a></li>
 							<li class="nav__item"><a class="nav__link" href="#">Cariere</a></li>
 							<li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
 						</ul>
 					</nav>
+
 					<img class="svg header__svg" id="menu" src="./images/menu.svg" alt="menu">
 				</div>    
 			</header>
