--- a/portofoliu.html
+++ b/portofoliu.html
@@ -61,9 +61,9 @@
                     </figure>
                 </div>
 
-                <a class="slideshow__prev" id="slideshow__prev">&#10094;</a>
+                <a class="slideshow__arrow slideshow__arrow--prev" id="slideshow__arrow--prev">&#10094;</a>
 
-                <a class="slideshow__next" id="slideshow__next">&#10095;</a>
+                <a class="slideshow__arrow slideshow__arrow--next" id="sslideshow__arrow--next">&#10095;</a>
 
                 <div class="slideshow__dots"> <!-- number of .slideshow__dot must be the same as number of slideshow__image -->
                     <span class="slideshow__dot" id="slideshow__dot"></span>
