--- a/portofoliu.html
+++ b/portofoliu.html
@@ -36,28 +36,28 @@
             <div class="slideshow">
 
                 <div class="slideshow__images">
-                    <figure class="slideshow__item"> <!-- number of .slideshow__dot must be the same as number of slideshow__image -->
+                    <figure class="slideshow__item" id="slideshow__item"> <!-- number of .slideshow__dot must be the same as number of slideshow__image -->
                         <img src="./images/foto1.jpg" alt="patinoar artificial exterior" class="slideshow__image">
                     </figure>
 
-                    <figure class="slideshow__item">
+                    <figure class="slideshow__item" id="slideshow__item">
                         <img src="./images/foto2.jpg" alt="patinoar artificial interior" class="slideshow__image">
 
-                        <figure class="slideshow__item">
-                            <img src="./images/foto3.jpg" alt="arena Sepsi" class="slideshow__image">
-                        </figure>
+                    <figure class="slideshow__item" id="slideshow__item">
+                        <img src="./images/foto3.jpg" alt="arena Sepsi" class="slideshow__image">
+                    </figure>
 
-                        <figure class="slideshow__item">
-                            <img src="./images/foto4.jpg" alt="arena Sepsi" class="slideshow__image">
-                        </figure>
+                    <figure class="slideshow__item" id="slideshow__item">
+                        <img src="./images/foto4.jpg" alt="arena Sepsi" class="slideshow__image">
+                    </figure>
 
-                        <figure class="slideshow__item">
-                            <img src="./images/foto5.jpg" alt="bertis" class="slideshow__image">
-                        </figure>
+                    <figure class="slideshow__item" id="slideshow__item">
+                        <img src="./images/foto5.jpg" alt="bertis" class="slideshow__image">
+                    </figure>
 
-                        <figure class="slideshow__item">
-                            <img src="./images/foto6.jpg" alt="cinema arta" class="slideshow__image">
-                        </figure>
+                    <figure class="slideshow__item" id="slideshow__item">
+                        <img src="./images/foto6.jpg" alt="cinema arta" class="slideshow__image">
+                    </figure>
                 </div>
 
                 <a class="slideshow__arrow slideshow__arrow--prev" id="slideshow__arrow--prev">&#10094;</a>
