--- a/activitate.html
+++ b/activitate.html
@@ -47,8 +47,8 @@
 					</h3>
 				</section>
 	
-				<div class="hero-section__button">
-					<a class="button" href="#services">Servicii</a>
+				<div class="hero-section__text-button">
+					<a class="text-button" href="#services">Servicii</a>
 				</div>
 			</main>
 		</div>
