--- a/activitate.html
+++ b/activitate.html
@@ -47,13 +47,13 @@
 					</h3>
 				</section>
 	
-				<div class="hero-section__text-button">
+				<div class="hero-section__button">
 					<a class="text-button" href="#services">Servicii</a>
 				</div>
 			</main>
 		</div>
 
-		<section class="page__separator page__separator--first" id="services">
+		<section id="services">
 			<h2 class="frame frame__title">
 				Proiectare și execuție
 			</h2>
