--- a/activitate.html
+++ b/activitate.html
@@ -53,7 +53,7 @@
 			</main>
 		</div>
 
-		<section id="services">
+		<section>
 			<h2 class="frame frame__title">
 				Proiectare și execuție
 			</h2>
