--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
 
             <div class="frame frame--carousel"> <!-- for small screens only -->
-                <div class="carousel">
+                <div class="carousel-txt">
                     <h3 class="frame__text frame__text--carousel">
                         Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
                     </h3>
