--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
                 </div>
             </div>
 
-            <div class="frame header__hide-desktop"> <!-- for large screens only -->
+            <div class="frame is-hidden"> <!-- for large screens only -->
                 <h3 class="frame__text">
                     Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
                 </h3>
             </div>
 
-            <div class="frame header__hide-desktop">
+            <div class="frame is-hidden">
                 <h3 class="frame__text">
                     Sistemele noastre electrice sunt optimizate pentru a fi ecologice și fiabile, asigurând eficiența energetică, securitatea și confortul clienților noștri
                 </h3>
