--- a/portofoliu.html
+++ b/portofoliu.html
@@ -62,7 +62,7 @@
                     </div>
                 </div>
 
-                <button class="carousel__button carousel__button--prev">
+                <button class="carousel__button carousel__button--prev is-hidden">
                     <img class="svg carousel__svg" src="./images/arrow_side.svg" alt="previous image">
                 </button>
 
